log
Wed 24 Apr 2024 09:36:25 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
167965d
Wed 24 Apr 2024 09:43:19 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
71b3ab3
Wed 24 Apr 2024 09:49:44 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:10: error: unused variable ‘buckets’ [-Werror=unused-variable]
   61 |   Pair** buckets = (Pair **) calloc(sizeof(Pair), capacity);  //inicializar cada espacio del la tabla.
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bec1dcc
